# graph-rag-SW

./: .env.example  .gitignore  README.md  docker-compose.yml
GraphRag-SW/: embbeds-ingest-characters.bru  embbeds-status.bru  movies_raw.bru  planets_raw.bru  species_raw.bru  starships_raw.bru  vehicles_raw.bru
srv-darth-maul/: install.sh  main.py  movies.service.py  requirements.txt
srv-darth-maul/services/: characters_service.py  movies_service.py  planets_service.py  species_service.py  starships_service.py  vehicles_service.py
srv-darth-vader/: .env.example  Cargo.toml
srv-darth-vader/src/: api.rs  main.rs  models.rs  services.rs  state.rs  utils.rs
srv-yoda/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum
srv-yoda/cmd/server/: main.go
srv-yoda/internal/api/: handlers.go  routes.go
srv-yoda/internal/config/: config.go
srv-yoda/internal/graph/: neo4j.go
srv-yoda/internal/kafka/: producer.go
srv-yoda/internal/llm/: gemini.go
srv-yoda/internal/models/: types.go
srv-yoda/pkg/logger/: logger.go
